--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -270,7 +270,7 @@
                                     <li>
                                         <a href="blog.html"><i class="zmdi zmdi-collection-music"></i> blog <i class="zmdi zmdi-caret-down"></i></a>
                                         <ul class="sub_menu pages">
-                                            <li><a href="Customer/Blog">blog details</a></li>
+                                            <li><a asp-action="Index" asp-controller="Blog" asp-area="Customer">blog details</a></li>
                                             <li><a href="blog-fullwidth.html">blog fullwidth</a></li>
                                             <li><a href="blog-sidebar.html">blog sidebar</a></li>
                                         </ul>
