--- a/Areas/Admin/Views/ProductPrice/TodayPrice.cshtml
+++ b/Areas/Admin/Views/ProductPrice/TodayPrice.cshtml
@@ -5,11 +5,11 @@
 }
 
 <div class="container mt-4">
-    <h3 class="text-center text-info mb-4 small-font-size">Daily Product Prices</h3>
+    <h3 class="text-center text-info ">Daily Product Prices</h3>
 
     @foreach (var group in Model)
     {
-        <h3 class="text-center text-primary mb-3 small-font-size">@group.Key</h3>
+        <h3 class=" text-primary mb-3 " style="margin-left:15px">@group.Key</h3>
 
         <div class="table-responsive">
             <table class="table table-striped table-bordered small-font-size">
